branches/Rohan/parser2.output
Terminaux inutilisés dans la grammaire

   KEYWORD
   TYPE
   POUCENT


État 11 conflits: 1 décalage/réduction
État 455 conflits: 1 décalage/réduction


Grammaire

    0 $accept: translation_unit $end

    1 type_specifier: VOID
    2               | CHAR
    3               | SHORT
    4               | INT
    5               | LONG
    6               | FLOAT
    7               | DOUBLE
    8               | SIGNED
    9               | UNSIGNED
   10               | BOOL
   11               | COMPLEX
   12               | IMAGINARY
   13               | atomic_type_specifier
   14               | struct_or_union_specifier
   15               | enum_specifier
   16               | TYPEDEF_NAME

   17 type_qualifier: CONST
   18               | RESTRICT
   19               | VOLATILE
   20               | ATOMIC

   21 primary_expression: IDENTIFIER
   22                   | constant
   23                   | string
   24                   | PAR_OUV expression PAR_FER
   25                   | generic_selection

   26 constant: I_CONSTANT
   27         | F_CONSTANT
   28         | ENUMERATION_CONSTANT

   29 enumeration_constant: IDENTIFIER

   30 string: STRING_LITERAL
   31       | FUNC_NAME

   32 generic_selection: GENERIC PAR_OUV assignment_expression VIRGULE generic_assoc_list PAR_FER

   33 generic_assoc_list: generic_association
   34                   | generic_assoc_list VIRGULE generic_association

   35 generic_association: type_name DEUXPOINTS assignment_expression
   36                    | DEFAULT DEUXPOINTS assignment_expression

   37 postfix_expression: primary_expression
   38                   | postfix_expression CRO_OUV expression CRO_FER
   39                   | postfix_expression PAR_OUV PAR_FER
   40                   | postfix_expression PAR_OUV argument_expression_list PAR_FER
   41                   | postfix_expression POINT IDENTIFIER
   42                   | postfix_expression PTR_OP IDENTIFIER
   43                   | postfix_expression INC_OP
   44                   | postfix_expression DEC_OP
   45                   | PAR_OUV type_name PAR_FER ACCO_OUV initializer_list ACCO_FER
   46                   | PAR_OUV type_name PAR_FER ACCO_OUV initializer_list VIRGULE ACCO_FER

   47 argument_expression_list: assignment_expression
   48                         | argument_expression_list VIRGULE assignment_expression

   49 unary_expression: postfix_expression
   50                 | INC_OP unary_expression
   51                 | DEC_OP unary_expression
   52                 | unary_operator cast_expression
   53                 | SIZEOF unary_expression
   54                 | SIZEOF PAR_OUV type_name PAR_FER
   55                 | ALIGNOF PAR_OUV type_name PAR_FER

   56 unary_operator: ECOMMERCIAL
   57               | FOIS
   58               | PLUS
   59               | MOINS
   60               | EQUIVALENT
   61               | POINT_EXCLA

   62 cast_expression: unary_expression
   63                | PAR_OUV type_name PAR_FER cast_expression

   64 multiplicative_expression: cast_expression
   65                          | multiplicative_expression FOIS cast_expression
   66                          | multiplicative_expression DIVISE cast_expression
   67                          | multiplicative_expression POURCENT cast_expression

   68 additive_expression: multiplicative_expression
   69                    | additive_expression PLUS multiplicative_expression
   70                    | additive_expression MOINS multiplicative_expression

   71 shift_expression: additive_expression
   72                 | shift_expression LEFT_OP additive_expression
   73                 | shift_expression RIGHT_OP additive_expression

   74 relational_expression: shift_expression
   75                      | relational_expression INFERIEUR shift_expression
   76                      | relational_expression SUPERIEUR shift_expression
   77                      | relational_expression LE_OP shift_expression
   78                      | relational_expression GE_OP shift_expression

   79 equality_expression: relational_expression
   80                    | equality_expression EQ_OP relational_expression
   81                    | equality_expression NE_OP relational_expression

   82 and_expression: equality_expression
   83               | and_expression ECOMMERCIAL equality_expression

   84 exclusive_or_expression: and_expression
   85                        | exclusive_or_expression PUISSANCE and_expression

   86 inclusive_or_expression: exclusive_or_expression
   87                        | inclusive_or_expression TILT exclusive_or_expression

   88 logical_and_expression: inclusive_or_expression
   89                       | logical_and_expression AND_OP inclusive_or_expression

   90 logical_or_expression: logical_and_expression
   91                      | logical_or_expression OR_OP logical_and_expression

   92 conditional_expression: logical_or_expression
   93                       | logical_or_expression POINT_INTERRO expression DEUXPOINTS conditional_expression

   94 assignment_expression: conditional_expression
   95                      | unary_expression assignment_operator assignment_expression

   96 assignment_operator: EGAL
   97                    | MUL_ASSIGN
   98                    | DIV_ASSIGN
   99                    | MOD_ASSIGN
  100                    | ADD_ASSIGN
  101                    | SUB_ASSIGN
  102                    | LEFT_ASSIGN
  103                    | RIGHT_ASSIGN
  104                    | AND_ASSIGN
  105                    | XOR_ASSIGN
  106                    | OR_ASSIGN

  107 expression: assignment_expression
  108           | expression VIRGULE assignment_expression

  109 constant_expression: conditional_expression

  110 declaration: declaration_specifiers POINT_VIRGULE
  111            | declaration_specifiers init_declarator_list POINT_VIRGULE
  112            | static_assert_declaration

  113 declaration_specifiers: storage_class_specifier declaration_specifiers
  114                       | storage_class_specifier
  115                       | type_specifier declaration_specifiers
  116                       | type_specifier
  117                       | type_qualifier declaration_specifiers
  118                       | type_qualifier
  119                       | function_specifier declaration_specifiers
  120                       | function_specifier
  121                       | alignment_specifier declaration_specifiers
  122                       | alignment_specifier

  123 init_declarator_list: init_declarator
  124                     | init_declarator_list VIRGULE init_declarator

  125 init_declarator: declarator EGAL initializer
  126                | declarator

  127 storage_class_specifier: TYPEDEF
  128                        | EXTERN
  129                        | STATIC
  130                        | THREAD_LOCAL
  131                        | AUTO
  132                        | REGISTER

  133 struct_or_union_specifier: struct_or_union ACCO_OUV struct_declaration_list ACCO_FER
  134                          | struct_or_union IDENTIFIER ACCO_OUV struct_declaration_list ACCO_FER
  135                          | struct_or_union IDENTIFIER

  136 struct_or_union: STRUCT
  137                | UNION

  138 struct_declaration_list: struct_declaration
  139                        | struct_declaration_list struct_declaration

  140 struct_declaration: specifier_qualifier_list POINT_VIRGULE
  141                   | specifier_qualifier_list struct_declarator_list POINT_VIRGULE
  142                   | static_assert_declaration

  143 specifier_qualifier_list: type_specifier specifier_qualifier_list
  144                         | type_specifier
  145                         | type_qualifier specifier_qualifier_list
  146                         | type_qualifier

  147 struct_declarator_list: struct_declarator
  148                       | struct_declarator_list VIRGULE struct_declarator

  149 struct_declarator: DEUXPOINTS constant_expression
  150                  | declarator DEUXPOINTS constant_expression
  151                  | declarator

  152 enum_specifier: ENUM ACCO_OUV enumerator_list ACCO_FER
  153               | ENUM ACCO_OUV enumerator_list VIRGULE ACCO_FER
  154               | ENUM IDENTIFIER ACCO_OUV enumerator_list ACCO_FER
  155               | ENUM IDENTIFIER ACCO_OUV enumerator_list VIRGULE ACCO_FER
  156               | ENUM IDENTIFIER

  157 enumerator_list: enumerator
  158                | enumerator_list VIRGULE enumerator

  159 enumerator: enumeration_constant EGAL constant_expression
  160           | enumeration_constant

  161 atomic_type_specifier: ATOMIC PAR_OUV type_name PAR_FER

  162 function_specifier: INLINE
  163                   | NORETURN

  164 alignment_specifier: ALIGNAS PAR_OUV type_name PAR_FER
  165                    | ALIGNAS PAR_OUV constant_expression PAR_FER

  166 declarator: pointer direct_declarator
  167           | direct_declarator

  168 direct_declarator: IDENTIFIER
  169                  | PAR_OUV declarator PAR_FER
  170                  | direct_declarator CRO_OUV CRO_FER
  171                  | direct_declarator CRO_OUV FOIS CRO_FER
  172                  | direct_declarator CRO_OUV STATIC type_qualifier_list assignment_expression CRO_FER
  173                  | direct_declarator CRO_OUV STATIC assignment_expression CRO_FER
  174                  | direct_declarator CRO_OUV type_qualifier_list FOIS CRO_FER
  175                  | direct_declarator CRO_OUV type_qualifier_list STATIC assignment_expression CRO_FER
  176                  | direct_declarator CRO_OUV type_qualifier_list assignment_expression CRO_FER
  177                  | direct_declarator CRO_OUV type_qualifier_list CRO_FER
  178                  | direct_declarator CRO_OUV assignment_expression CRO_FER
  179                  | direct_declarator PAR_OUV parameter_type_list PAR_FER
  180                  | direct_declarator PAR_OUV PAR_FER
  181                  | direct_declarator PAR_OUV identifier_list PAR_FER

  182 pointer: FOIS type_qualifier_list pointer
  183        | FOIS type_qualifier_list
  184        | FOIS pointer
  185        | FOIS

  186 type_qualifier_list: type_qualifier
  187                    | type_qualifier_list type_qualifier

  188 parameter_type_list: parameter_list VIRGULE ELLIPSIS
  189                    | parameter_list

  190 parameter_list: parameter_declaration
  191               | parameter_list VIRGULE parameter_declaration

  192 parameter_declaration: declaration_specifiers declarator
  193                      | declaration_specifiers abstract_declarator
  194                      | declaration_specifiers

  195 identifier_list: IDENTIFIER
  196                | identifier_list VIRGULE IDENTIFIER

  197 type_name: specifier_qualifier_list abstract_declarator
  198          | specifier_qualifier_list

  199 abstract_declarator: pointer direct_abstract_declarator
  200                    | pointer
  201                    | direct_abstract_declarator

  202 direct_abstract_declarator: PAR_OUV abstract_declarator PAR_FER
  203                           | CRO_OUV CRO_FER
  204                           | CRO_OUV FOIS CRO_FER
  205                           | CRO_OUV STATIC type_qualifier_list assignment_expression CRO_FER
  206                           | CRO_OUV STATIC assignment_expression CRO_FER
  207                           | CRO_OUV type_qualifier_list STATIC assignment_expression CRO_FER
  208                           | CRO_OUV type_qualifier_list assignment_expression CRO_FER
  209                           | CRO_OUV type_qualifier_list CRO_FER
  210                           | CRO_OUV assignment_expression CRO_FER
  211                           | direct_abstract_declarator CRO_OUV CRO_FER
  212                           | direct_abstract_declarator CRO_OUV FOIS CRO_FER
  213                           | direct_abstract_declarator CRO_OUV STATIC type_qualifier_list assignment_expression CRO_FER
  214                           | direct_abstract_declarator CRO_OUV STATIC assignment_expression CRO_FER
  215                           | direct_abstract_declarator CRO_OUV type_qualifier_list assignment_expression CRO_FER
  216                           | direct_abstract_declarator CRO_OUV type_qualifier_list STATIC assignment_expression CRO_FER
  217                           | direct_abstract_declarator CRO_OUV type_qualifier_list CRO_FER
  218                           | direct_abstract_declarator CRO_OUV assignment_expression CRO_FER
  219                           | PAR_OUV PAR_FER
  220                           | PAR_OUV parameter_type_list PAR_FER
  221                           | direct_abstract_declarator PAR_OUV PAR_FER
  222                           | direct_abstract_declarator PAR_OUV parameter_type_list PAR_FER

  223 initializer: ACCO_OUV initializer_list ACCO_FER
  224            | ACCO_OUV initializer_list VIRGULE ACCO_FER
  225            | assignment_expression

  226 initializer_list: designation initializer
  227                 | initializer
  228                 | initializer_list VIRGULE designation initializer
  229                 | initializer_list VIRGULE initializer

  230 designation: designator_list EGAL

  231 designator_list: designator
  232                | designator_list designator

  233 designator: CRO_OUV constant_expression CRO_FER
  234           | POINT IDENTIFIER

  235 static_assert_declaration: STATIC_ASSERT PAR_OUV constant_expression VIRGULE STRING_LITERAL PAR_FER POINT_VIRGULE

  236 statement: labeled_statement
  237          | compound_statement
  238          | expression_statement
  239          | selection_statement
  240          | iteration_statement
  241          | jump_statement

  242 labeled_statement: IDENTIFIER DEUXPOINTS statement
  243                  | CASE constant_expression DEUXPOINTS statement
  244                  | DEFAULT DEUXPOINTS statement

  245 compound_statement: ACCO_OUV ACCO_FER
  246                   | ACCO_OUV block_item_list ACCO_FER

  247 block_item_list: block_item
  248                | block_item_list block_item

  249 block_item: declaration
  250           | statement

  251 expression_statement: POINT_VIRGULE
  252                     | expression POINT_VIRGULE

  253 selection_statement: IF PAR_OUV expression PAR_FER statement ELSE statement
  254                    | IF PAR_OUV expression PAR_FER statement
  255                    | SWITCH PAR_OUV expression PAR_FER statement

  256 iteration_statement: WHILE PAR_OUV expression PAR_FER statement
  257                    | DO statement WHILE PAR_OUV expression PAR_FER POINT_VIRGULE
  258                    | FOR PAR_OUV expression_statement expression_statement PAR_FER statement
  259                    | FOR PAR_OUV expression_statement expression_statement expression PAR_FER statement
  260                    | FOR PAR_OUV declaration expression_statement PAR_FER statement
  261                    | FOR PAR_OUV declaration expression_statement expression PAR_FER statement

  262 jump_statement: GOTO IDENTIFIER POINT_VIRGULE
  263               | CONTINUE POINT_VIRGULE
  264               | BREAK POINT_VIRGULE
  265               | RETURN POINT_VIRGULE
  266               | RETURN expression POINT_VIRGULE

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list compound_statement
  272                    | declaration_specifiers declarator compound_statement

  273 declaration_list: declaration
  274                 | declaration_list declaration


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
KEYWORD (258)
TYPE (259)
IDENTIFIER (260) 21 29 41 42 134 135 154 155 156 168 195 196 234 242
    262
I_CONSTANT (261) 26
F_CONSTANT (262) 27
STRING_LITERAL (263) 30 235
FUNC_NAME (264) 31
SIZEOF (265) 53 54
PTR_OP (266) 42
INC_OP (267) 43 50
DEC_OP (268) 44 51
LEFT_OP (269) 72
RIGHT_OP (270) 73
LE_OP (271) 77
GE_OP (272) 78
EQ_OP (273) 80
NE_OP (274) 81
AND_OP (275) 89
OR_OP (276) 91
MUL_ASSIGN (277) 97
DIV_ASSIGN (278) 98
MOD_ASSIGN (279) 99
ADD_ASSIGN (280) 100
SUB_ASSIGN (281) 101
LEFT_ASSIGN (282) 102
RIGHT_ASSIGN (283) 103
AND_ASSIGN (284) 104
XOR_ASSIGN (285) 105
OR_ASSIGN (286) 106
TYPEDEF_NAME (287) 16
ENUMERATION_CONSTANT (288) 28
POINT_VIRGULE (289) 110 111 140 141 235 251 252 257 262 263 264 265
    266
ACCO_OUV (290) 45 46 133 134 152 153 154 155 223 224 245 246
ACCO_FER (291) 45 46 133 134 152 153 154 155 223 224 245 246
VIRGULE (292) 32 34 46 48 108 124 148 153 155 158 188 191 196 224 228
    229 235
DEUXPOINTS (293) 35 36 93 149 150 242 243 244
EGAL (294) 96 125 159 230
PAR_OUV (295) 24 32 39 40 45 46 54 55 63 161 164 165 169 179 180 181
    202 219 220 221 222 235 253 254 255 256 257 258 259 260 261
PAR_FER (296) 24 32 39 40 45 46 54 55 63 161 164 165 169 179 180 181
    202 219 220 221 222 235 253 254 255 256 257 258 259 260 261
CRO_OUV (297) 38 170 171 172 173 174 175 176 177 178 203 204 205 206
    207 208 209 210 211 212 213 214 215 216 217 218 233
CRO_FER (298) 38 170 171 172 173 174 175 176 177 178 203 204 205 206
    207 208 209 210 211 212 213 214 215 216 217 218 233
POINT (299) 41 234
ECOMMERCIAL (300) 56 83
POINT_EXCLA (301) 61
EQUIVALENT (302) 60
MOINS (303) 59 70
PLUS (304) 58 69
FOIS (305) 57 65 171 174 182 183 184 185 204 212
DIVISE (306) 66
POUCENT (307)
INFERIEUR (308) 75
SUPERIEUR (309) 76
PUISSANCE (310) 85
TILT (311) 87
POINT_INTERRO (312) 93
POURCENT (313) 67
TYPEDEF (314) 127
EXTERN (315) 128
STATIC (316) 129 172 173 175 205 206 207 213 214 216
AUTO (317) 131
REGISTER (318) 132
INLINE (319) 162
CONST (320) 17
RESTRICT (321) 18
VOLATILE (322) 19
ATOMIC (323) 20 161
BOOL (324) 10
CHAR (325) 2
SHORT (326) 3
INT (327) 4
LONG (328) 5
SIGNED (329) 8
UNSIGNED (330) 9
FLOAT (331) 6
DOUBLE (332) 7
VOID (333) 1
COMPLEX (334) 11
IMAGINARY (335) 12
STRUCT (336) 136
UNION (337) 137
ENUM (338) 152 153 154 155 156
ELLIPSIS (339) 188
CASE (340) 243
DEFAULT (341) 36 244
IF (342) 253 254
ELSE (343) 253
SWITCH (344) 255
WHILE (345) 256 257
DO (346) 257
FOR (347) 258 259 260 261
GOTO (348) 262
RETURN (349) 265 266
BREAK (350) 264
CONTINUE (351) 263
ALIGNAS (352) 164 165
ALIGNOF (353) 55
GENERIC (354) 32
NORETURN (355) 163
STATIC_ASSERT (356) 235
THREAD_LOCAL (357) 130


Non-terminaux, suivis des règles où ils apparaissent

$accept (103)
    à gauche: 0
type_specifier (104)
    à gauche: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16, à droite: 115
    116 143 144
type_qualifier (105)
    à gauche: 17 18 19 20, à droite: 117 118 145 146 186 187
primary_expression (106)
    à gauche: 21 22 23 24 25, à droite: 37
constant (107)
    à gauche: 26 27 28, à droite: 22
enumeration_constant (108)
    à gauche: 29, à droite: 159 160
string (109)
    à gauche: 30 31, à droite: 23
generic_selection (110)
    à gauche: 32, à droite: 25
generic_assoc_list (111)
    à gauche: 33 34, à droite: 32 34
generic_association (112)
    à gauche: 35 36, à droite: 33 34
postfix_expression (113)
    à gauche: 37 38 39 40 41 42 43 44 45 46, à droite: 38 39 40 41
    42 43 44 49
argument_expression_list (114)
    à gauche: 47 48, à droite: 40 48
unary_expression (115)
    à gauche: 49 50 51 52 53 54 55, à droite: 50 51 53 62 95
unary_operator (116)
    à gauche: 56 57 58 59 60 61, à droite: 52
cast_expression (117)
    à gauche: 62 63, à droite: 52 63 64 65 66 67
multiplicative_expression (118)
    à gauche: 64 65 66 67, à droite: 65 66 67 68 69 70
additive_expression (119)
    à gauche: 68 69 70, à droite: 69 70 71 72 73
shift_expression (120)
    à gauche: 71 72 73, à droite: 72 73 74 75 76 77 78
relational_expression (121)
    à gauche: 74 75 76 77 78, à droite: 75 76 77 78 79 80 81
equality_expression (122)
    à gauche: 79 80 81, à droite: 80 81 82 83
and_expression (123)
    à gauche: 82 83, à droite: 83 84 85
exclusive_or_expression (124)
    à gauche: 84 85, à droite: 85 86 87
inclusive_or_expression (125)
    à gauche: 86 87, à droite: 87 88 89
logical_and_expression (126)
    à gauche: 88 89, à droite: 89 90 91
logical_or_expression (127)
    à gauche: 90 91, à droite: 91 92 93
conditional_expression (128)
    à gauche: 92 93, à droite: 93 94 109
assignment_expression (129)
    à gauche: 94 95, à droite: 32 35 36 47 48 95 107 108 172 173
    175 176 178 205 206 207 208 210 213 214 215 216 218 225
assignment_operator (130)
    à gauche: 96 97 98 99 100 101 102 103 104 105 106, à droite:
    95
expression (131)
    à gauche: 107 108, à droite: 24 38 93 108 252 253 254 255 256
    257 259 261 266
constant_expression (132)
    à gauche: 109, à droite: 149 150 159 165 233 235 243
declaration (133)
    à gauche: 110 111 112, à droite: 249 260 261 270 273 274
declaration_specifiers (134)
    à gauche: 113 114 115 116 117 118 119 120 121 122, à droite:
    110 111 113 115 117 119 121 192 193 194 271 272
init_declarator_list (135)
    à gauche: 123 124, à droite: 111 124
init_declarator (136)
    à gauche: 125 126, à droite: 123 124
storage_class_specifier (137)
    à gauche: 127 128 129 130 131 132, à droite: 113 114
struct_or_union_specifier (138)
    à gauche: 133 134 135, à droite: 14
struct_or_union (139)
    à gauche: 136 137, à droite: 133 134 135
struct_declaration_list (140)
    à gauche: 138 139, à droite: 133 134 139
struct_declaration (141)
    à gauche: 140 141 142, à droite: 138 139
specifier_qualifier_list (142)
    à gauche: 143 144 145 146, à droite: 140 141 143 145 197 198
struct_declarator_list (143)
    à gauche: 147 148, à droite: 141 148
struct_declarator (144)
    à gauche: 149 150 151, à droite: 147 148
enum_specifier (145)
    à gauche: 152 153 154 155 156, à droite: 15
enumerator_list (146)
    à gauche: 157 158, à droite: 152 153 154 155 158
enumerator (147)
    à gauche: 159 160, à droite: 157 158
atomic_type_specifier (148)
    à gauche: 161, à droite: 13
function_specifier (149)
    à gauche: 162 163, à droite: 119 120
alignment_specifier (150)
    à gauche: 164 165, à droite: 121 122
declarator (151)
    à gauche: 166 167, à droite: 125 126 150 151 169 192 271 272
direct_declarator (152)
    à gauche: 168 169 170 171 172 173 174 175 176 177 178 179 180
    181, à droite: 166 167 170 171 172 173 174 175 176 177 178 179
    180 181
pointer (153)
    à gauche: 182 183 184 185, à droite: 166 182 184 199 200
type_qualifier_list (154)
    à gauche: 186 187, à droite: 172 174 175 176 177 182 183 187
    205 207 208 209 213 215 216 217
parameter_type_list (155)
    à gauche: 188 189, à droite: 179 220 222
parameter_list (156)
    à gauche: 190 191, à droite: 188 189 191
parameter_declaration (157)
    à gauche: 192 193 194, à droite: 190 191
identifier_list (158)
    à gauche: 195 196, à droite: 181 196
type_name (159)
    à gauche: 197 198, à droite: 35 45 46 54 55 63 161 164
abstract_declarator (160)
    à gauche: 199 200 201, à droite: 193 197 202
direct_abstract_declarator (161)
    à gauche: 202 203 204 205 206 207 208 209 210 211 212 213 214
    215 216 217 218 219 220 221 222, à droite: 199 201 211 212 213
    214 215 216 217 218 221 222
initializer (162)
    à gauche: 223 224 225, à droite: 125 226 227 228 229
initializer_list (163)
    à gauche: 226 227 228 229, à droite: 45 46 223 224 228 229
designation (164)
    à gauche: 230, à droite: 226 228
designator_list (165)
    à gauche: 231 232, à droite: 230 232
designator (166)
    à gauche: 233 234, à droite: 231 232
static_assert_declaration (167)
    à gauche: 235, à droite: 112 142
statement (168)
    à gauche: 236 237 238 239 240 241, à droite: 242 243 244 250
    253 254 255 256 257 258 259 260 261
labeled_statement (169)
    à gauche: 242 243 244, à droite: 236
compound_statement (170)
    à gauche: 245 246, à droite: 237 271 272
block_item_list (171)
    à gauche: 247 248, à droite: 246 248
block_item (172)
    à gauche: 249 250, à droite: 247 248
expression_statement (173)
    à gauche: 251 252, à droite: 238 258 259 260 261
selection_statement (174)
    à gauche: 253 254 255, à droite: 239
iteration_statement (175)
    à gauche: 256 257 258 259 260 261, à droite: 240
jump_statement (176)
    à gauche: 262 263 264 265 266, à droite: 241
translation_unit (177)
    à gauche: 267 268, à droite: 0 268
external_declaration (178)
    à gauche: 269 270, à droite: 267 268
function_definition (179)
    à gauche: 271 272, à droite: 269
declaration_list (180)
    à gauche: 273 274, à droite: 271 274


État 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   décalage et aller à l'état 1
    TYPEDEF        décalage et aller à l'état 2
    EXTERN         décalage et aller à l'état 3
    STATIC         décalage et aller à l'état 4
    AUTO           décalage et aller à l'état 5
    REGISTER       décalage et aller à l'état 6
    INLINE         décalage et aller à l'état 7
    CONST          décalage et aller à l'état 8
    RESTRICT       décalage et aller à l'état 9
    VOLATILE       décalage et aller à l'état 10
    ATOMIC         décalage et aller à l'état 11
    BOOL           décalage et aller à l'état 12
    CHAR           décalage et aller à l'état 13
    SHORT          décalage et aller à l'état 14
    INT            décalage et aller à l'état 15
    LONG           décalage et aller à l'état 16
    SIGNED         décalage et aller à l'état 17
    UNSIGNED       décalage et aller à l'état 18
    FLOAT          décalage et aller à l'état 19
    DOUBLE         décalage et aller à l'état 20
    VOID           décalage et aller à l'état 21
    COMPLEX        décalage et aller à l'état 22
    IMAGINARY      décalage et aller à l'état 23
    STRUCT         décalage et aller à l'état 24
    UNION          décalage et aller à l'état 25
    ENUM           décalage et aller à l'état 26
    ALIGNAS        décalage et aller à l'état 27
    NORETURN       décalage et aller à l'état 28
    STATIC_ASSERT  décalage et aller à l'état 29
    THREAD_LOCAL   décalage et aller à l'état 30

    type_specifier             aller à l'état 31
    type_qualifier             aller à l'état 32
    declaration                aller à l'état 33
    declaration_specifiers     aller à l'état 34
    storage_class_specifier    aller à l'état 35
    struct_or_union_specifier  aller à l'état 36
    struct_or_union            aller à l'état 37
    enum_specifier             aller à l'état 38
    atomic_type_specifier      aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41
    static_assert_declaration  aller à l'état 42
    translation_unit           aller à l'état 43
    external_declaration       aller à l'état 44
    function_definition        aller à l'état 45


État 1

   16 type_specifier: TYPEDEF_NAME .

    $défaut  réduction par utilisation de la règle 16 (type_specifier)


État 2

  127 storage_class_specifier: TYPEDEF .

    $défaut  réduction par utilisation de la règle 127 (storage_class_specifier)


État 3

  128 storage_class_specifier: EXTERN .

    $défaut  réduction par utilisation de la règle 128 (storage_class_specifier)


État 4

  129 storage_class_specifier: STATIC .

    $défaut  réduction par utilisation de la règle 129 (storage_class_specifier)


État 5

  131 storage_class_specifier: AUTO .

    $défaut  réduction par utilisation de la règle 131 (storage_class_specifier)


État 6

  132 storage_class_specifier: REGISTER .

    $défaut  réduction par utilisation de la règle 132 (storage_class_specifier)


État 7

  162 function_specifier: INLINE .

    $défaut  réduction par utilisation de la règle 162 (function_specifier)


État 8

   17 type_qualifier: CONST .

    $défaut  réduction par utilisation de la règle 17 (type_qualifier)


État 9

   18 type_qualifier: RESTRICT .

    $défaut  réduction par utilisation de la règle 18 (type_qualifier)


État 10

   19 type_qualifier: VOLATILE .

    $défaut  réduction par utilisation de la règle 19 (type_qualifier)


État 11

   20 type_qualifier: ATOMIC .
  161 atomic_type_specifier: ATOMIC . PAR_OUV type_name PAR_FER

    PAR_OUV  décalage et aller à l'état 46

    PAR_OUV   [réduction par utilisation de la règle 20 (type_qualifier)]
    $défaut  réduction par utilisation de la règle 20 (type_qualifier)


État 12

   10 type_specifier: BOOL .

    $défaut  réduction par utilisation de la règle 10 (type_specifier)


État 13

    2 type_specifier: CHAR .

    $défaut  réduction par utilisation de la règle 2 (type_specifier)


État 14

    3 type_specifier: SHORT .

    $défaut  réduction par utilisation de la règle 3 (type_specifier)


État 15

    4 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 4 (type_specifier)


État 16

    5 type_specifier: LONG .

    $défaut  réduction par utilisation de la règle 5 (type_specifier)


État 17

    8 type_specifier: SIGNED .

    $défaut  réduction par utilisation de la règle 8 (type_specifier)


État 18

    9 type_specifier: UNSIGNED .

    $défaut  réduction par utilisation de la règle 9 (type_specifier)


État 19

    6 type_specifier: FLOAT .

    $défaut  réduction par utilisation de la règle 6 (type_specifier)


État 20

    7 type_specifier: DOUBLE .

    $défaut  réduction par utilisation de la règle 7 (type_specifier)


État 21

    1 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 1 (type_specifier)


État 22

   11 type_specifier: COMPLEX .

    $défaut  réduction par utilisation de la règle 11 (type_specifier)


État 23

   12 type_specifier: IMAGINARY .

    $défaut  réduction par utilisation de la règle 12 (type_specifier)


État 24

  136 struct_or_union: STRUCT .

    $défaut  réduction par utilisation de la règle 136 (struct_or_union)


État 25

  137 struct_or_union: UNION .

    $défaut  réduction par utilisation de la règle 137 (struct_or_union)


État 26

  152 enum_specifier: ENUM . ACCO_OUV enumerator_list ACCO_FER
  153               | ENUM . ACCO_OUV enumerator_list VIRGULE ACCO_FER
  154               | ENUM . IDENTIFIER ACCO_OUV enumerator_list ACCO_FER
  155               | ENUM . IDENTIFIER ACCO_OUV enumerator_list VIRGULE ACCO_FER
  156               | ENUM . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 47
    ACCO_OUV    décalage et aller à l'état 48


État 27

  164 alignment_specifier: ALIGNAS . PAR_OUV type_name PAR_FER
  165                    | ALIGNAS . PAR_OUV constant_expression PAR_FER

    PAR_OUV  décalage et aller à l'état 49


État 28

  163 function_specifier: NORETURN .

    $défaut  réduction par utilisation de la règle 163 (function_specifier)


État 29

  235 static_assert_declaration: STATIC_ASSERT . PAR_OUV constant_expression VIRGULE STRING_LITERAL PAR_FER POINT_VIRGULE

    PAR_OUV  décalage et aller à l'état 50


État 30

  130 storage_class_specifier: THREAD_LOCAL .

    $défaut  réduction par utilisation de la règle 130 (storage_class_specifier)


État 31

  115 declaration_specifiers: type_specifier . declaration_specifiers
  116                       | type_specifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    ATOMIC        décalage et aller à l'état 11
    BOOL          décalage et aller à l'état 12
    CHAR          décalage et aller à l'état 13
    SHORT         décalage et aller à l'état 14
    INT           décalage et aller à l'état 15
    LONG          décalage et aller à l'état 16
    SIGNED        décalage et aller à l'état 17
    UNSIGNED      décalage et aller à l'état 18
    FLOAT         décalage et aller à l'état 19
    DOUBLE        décalage et aller à l'état 20
    VOID          décalage et aller à l'état 21
    COMPLEX       décalage et aller à l'état 22
    IMAGINARY     décalage et aller à l'état 23
    STRUCT        décalage et aller à l'état 24
    UNION         décalage et aller à l'état 25
    ENUM          décalage et aller à l'état 26
    ALIGNAS       décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 116 (declaration_specifiers)

    type_specifier             aller à l'état 31
    type_qualifier             aller à l'état 32
    declaration_specifiers     aller à l'état 51
    storage_class_specifier    aller à l'état 35
    struct_or_union_specifier  aller à l'état 36
    struct_or_union            aller à l'état 37
    enum_specifier             aller à l'état 38
    atomic_type_specifier      aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41


État 32

  117 declaration_specifiers: type_qualifier . declaration_specifiers
  118                       | type_qualifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    ATOMIC        décalage et aller à l'état 11
    BOOL          décalage et aller à l'état 12
    CHAR          décalage et aller à l'état 13
    SHORT         décalage et aller à l'état 14
    INT           décalage et aller à l'état 15
    LONG          décalage et aller à l'état 16
    SIGNED        décalage et aller à l'état 17
    UNSIGNED      décalage et aller à l'état 18
    FLOAT         décalage et aller à l'état 19
    DOUBLE        décalage et aller à l'état 20
    VOID          décalage et aller à l'état 21
    COMPLEX       décalage et aller à l'état 22
    IMAGINARY     décalage et aller à l'état 23
    STRUCT        décalage et aller à l'état 24
    UNION         décalage et aller à l'état 25
    ENUM          décalage et aller à l'état 26
    ALIGNAS       décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 118 (declaration_specifiers)
